--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="assets/img/favicon.png"/>
         
         <!-- CSS Imports -->
-        <link rel="stylesheet" href="assets/css/home.css">
+        <link rel="stylesheet" href="assets/css/index.css">
     </head>
 
     <body>
@@ -34,6 +34,6 @@
         </div>
 
         <!-- JavaScript Imports -->
-        <script type="text/javascript" src="assets/js/home.js"></script>
+        <script type="text/javascript" src="assets/js/index.js"></script>
     </body>
 </html>
